<resources>
    <string name="app_name">Here I Am</string>
    <string name="label_events">Events</string>


    <string name="server_client_id">744771126305-pb05g7ga8u555ajlsu4aa424fio4qm8r.apps.googleusercontent.com</string>
    <string name="server_widget_url">http://www.google.com</string>


    <!-- Content Description for images -->
    <string name="desc_google_icon">Google Logo</string>
    <string name="server_client_id_web">744771126305-pb05g7ga8u555ajlsu4aa424fio4qm8r.apps.googleusercontent.com</string>
    <string name="project_id">friendlypix-4fa22</string>
    <string name="title_activity_welcome">FriendlyPix</string>

    <string name="welcome_screen_text">Here I am</string>
    <string name="sign_in_button_text">sign in with Google</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="error_upload_task_create">Couldn\'t create upload task.</string>
    <string name="default_progress_message">Please wait...</string>
    <string name="profile_progress_message">Signing in...</string>
    <string name="post_upload_progress_message">Uploading...</string>
    <string name="user_logged_out_error">You must be logged in to do that.</string>
    <string name="error_user_not_signed_in">Error user not signed in.</string>
    <string name="web_client_id">744771126305-pb05g7ga8u555ajlsu4aa424fio4qm8r.apps.googleusercontent.com</string>
    <string name="about_text">\"There\'s a place where the sun shines brighter… \n\n There\'s a mountain that climbs to the stars…\"</string>
    <string name="about_version">"Version "</string>
    <string name="transition_icon">transition_icon</string>
    <string name="EVENT_KEY">EVENT_KEY</string>
    <string name="title_activity_list_payments_statements">Payments</string>
    <string name="title_list_events">Events</string>
    <string name="title_list_documents">Documents</string>
    <string name="tittle_activity_new_document">Upload Document</string>
    <string name="NEW_DOC_TYPE">NEW_DOC_TYPE</string>
    <string name="NEW_DOC_KEY">NEW_DOC_KEY</string>


    <string name="facebook_app_id">210319032763741</string>
    <string name="fb_login_protocol_scheme">fb350228468674370</string>
    <string name="sign_in_with_facebook">SIGN IN WITH FACEBOOK</string>
    <string name="title_list_training">Training</string>
    <string name="FILE_LOCATION">FILE_LOCATION</string>
    <string name="DynamicLinkDomain">https://f22xa.app.goo.gl/</string>
    <string name="NAME_ROOM">NAME_ROOM</string>


    <string name="invitation_title">Invite People...</string>
    <string name="invitation_custom_image">Invite People...</string>
    <string name="invitation_cta">Invite People...</string>
    <string name="invitation_message">Hello! Somebody wants to share a map with you</string>
    <string name="invitation_deep_link">Invite People...</string>
    <string name="NEW_MAP_TITLE">New Map</string>
    <string name="type_map_subject_here">Type map subject here...</string>
    <string name="no_maps_yet">No Maps Yet</string>
    <string name="add_map_info">Provide a map subject and optional icon</string>
    <string name="detail_participants">Participants</string>
    <string name="add_participant_hint">Add participant...</string>
    <string name="exit_map">Exit map</string>
    <string name="picture_chooser_title">Choose an icon...</string>
    <string name="error_required_field">Type a map subject here...</string>
    <string name="create_map_message">Creating map...</string>
    <string name="sharing_location_info">You are sharing your location.</string>
    <string name="notification_title">Here I am</string>


</resources>
