<?xml version="1.0" encoding="utf-8"?>

<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/detail_backdrop_height"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleMarginEnd="64dp"
            app:expandedTitleMarginStart="48dp"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <ImageView
                android:id="@+id/backdrop"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                android:scaleType="centerCrop"
                android:transitionName="@string/transition_icon"
                app:layout_collapseMode="parallax" />

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBackground"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/activity_perfil_description"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorPrimaryLight"
            android:orientation="vertical"
            tools:context="com.ziegler.hereiam.RoomDetailActivity">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/info_background"
                android:paddingTop="@dimen/common_padding">

                <TextView
                    android:id="@+id/label_participants"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/common_padding"
                    android:text="@string/detail_participants"
                    android:textColor="@color/colorAccent"
                    android:textSize="16sp" />

                <LinearLayout
                    android:id="@+id/button_add_people"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/item_line_size"
                    android:layout_below="@id/label_participants"
                    android:background="?android:attr/selectableItemBackground"
                    android:clickable="true"
                    android:gravity="center">

                    <ImageView
                        android:id="@+id/icon_add_participant"
                        android:layout_width="@dimen/icon_add_participant_size"
                        android:layout_height="@dimen/icon_add_participant_size"
                        android:layout_marginLeft="@dimen/common_padding"
                        android:layout_marginStart="@dimen/common_padding"
                        android:src="@drawable/ic_add_person"
                        android:tint="@color/secondary_text" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/margin_add_participant_button"
                        android:text="@string/add_participant_hint"
                        android:textColor="@color/secondary_text"
                        android:textSize="@dimen/normal_size_text" />


                </LinearLayout>
            </RelativeLayout>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/room_detail_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scrollbars="vertical" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/medium_line_button"
                android:layout_marginTop="@dimen/common_padding"
                android:background="@color/info_background">

                <LinearLayout
                    android:id="@+id/button_exit_map"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="?android:attr/selectableItemBackground"
                    android:clickable="true"
                    android:gravity="center">

                    <ImageView
                        android:id="@+id/leave_room_con"
                        android:layout_width="@dimen/exit_map_icon_size"
                        android:layout_height="@dimen/exit_map_icon_size"
                        android:layout_marginLeft="@dimen/margin_icon_exit"
                        android:layout_marginStart="@dimen/margin_icon_exit"
                        android:src="@drawable/ic_exit_group"
                        android:tint="@color/warn_button" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/margin_exit_label_button"
                        android:text="@string/exit_map"
                        android:textColor="@color/warn_button"
                        android:textSize="@dimen/normal_size_text" />
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>


</android.support.design.widget.CoordinatorLayout>

